--- a/nike.html
+++ b/nike.html
@@ -28,7 +28,7 @@
       </div>
 
       <div class="links">
-        <a href="zapatos.html"> <img src="images/shoes_logo.png" class="logo"></a>
+        <a href="index.html"> <img src="images/shoes_logo.png" class="logo"></a>
         <ul>
           <li><a href="">Inicio</a></li>
           <li><a href="">Promociones</a></li>
