--- a/index.html
+++ b/index.html
@@ -77,8 +77,9 @@
             <div class="content">
               <h5>Dell Laptops</h5>
               <p>Click y conoce todos nuestros productos.</p>
-              <button>Catálogo y Precios</button>
-            </div>
+              <a href="nike.html">
+                <button>Catálogo y Precios</button>
+              </a>            </div>
           </div>
           <img src="images/adidas_logo.png" alt="adidas">
 
@@ -93,8 +94,9 @@
             <div class="content">
               <h5>Dell Laptops</h5>
               <p>Click y conoce todos nuestros productos.</p>
-              <button>Catálogo y Precios</button>
-            </div>
+              <a href="adidas.html">
+                <button>Catálogo y Precios</button>
+              </a>            </div>
           </div>
           <img src="images/jordan_logo.png" alt="jordan">
 
@@ -109,8 +111,9 @@
             <div class="content">
               <h5>Dell Laptops</h5>
               <p>Click y conoce todos nuestros productos.</p>
-              <button>Catálogo y Precios</button>
-            </div>
+              <a href="jordan.html">
+                <button>Catálogo y Precios</button>
+              </a>            </div>
           </div>
           <img src="images/reebok_logo.png" alt="reebok">
 
@@ -125,8 +128,9 @@
             <div class="content">
               <h5>Dell Laptops</h5>
               <p>Click y conoce todos nuestros productos.</p>
-              <button>Catálogo y Precios</button>
-            </div>
+              <a href="adidas.html">
+                <button>Catálogo y Precios</button>
+              </a>            </div>
           </div>
           <img src="images/converse_logo.png" alt="converse">
 
