--- a/index.html
+++ b/index.html
@@ -56,14 +56,14 @@
         <div class="card1">
           <div class="circle">
             <div class="content">
-              <h5>Zapatos Nike</h5>
+              <h5> Camisetas KISTH</h5>
               <p>Click y conoce todos nuestros catálogos.</p>
               <a href="nike.html">
                 <button>Catálogo y Precios</button>
               </a>
             </div>
           </div>
-          <img src="images/nike_logo.png" alt="nike">
+          <img src="images/felipemaless-5.png" alt="nike">
 
         </div>
       </div>
