--- a/nike.html
+++ b/nike.html
@@ -51,36 +51,36 @@
     <div class="productos">
         <div class="box">
           <div class="name">
-            <h2>Nike Air</h2>
+            <h2>KISTH T-Shirt</h2>
             <p>Al por Mayor: $60</p>
             <p>Al por Menor: $50</p>
 
           </div>
             <a href="https://api.whatsapp.com/send/?phone=%2B593983842004&text=Estoy+Interesado+en+este+producto.&app_absent=0" target="_blank" class="buy">Comprar</a>
             <div class="circle"></div>
-            <img class="product" src="images/nike1.png" alt="product">
+            <img class="product" src="images/tshirt_PNG5448.png" alt="product">
         </div>
         <div class="box">
             <div class="name">
-              <h2>Nike Air</h2>
+              <h2>KISTH T-Shirt</h2>
               <p>Al por Mayor: $60</p>
               <p>Al por Menor: $50</p>
 
             </div>
             <a href="https://api.whatsapp.com/send/?phone=%2B593983842004&text=Estoy+Interesado+en+este+producto.&app_absent=0" target="_blank" class="buy">Comprar</a>
             <div class="circle"></div>
-            <img class="product" src="images/nike2.png" alt="product">
+            <img class="product" src="images/tshirt_PNG5448.png" alt="product">
         </div>
         <div class="box">
           <div class="name">
-            <h2>Nike Air</h2>
+            <h2>KISTH T-Shirt</h2>
             <p>Al por Mayor: $60</p>
             <p>Al por Menor: $50</p>
 
           </div>
             <a href="https://api.whatsapp.com/send/?phone=%2B593983842004&text=Estoy+Interesado+en+este+producto.&app_absent=0" target="_blank" class="buy">Comprar</a>
             <div class="circle"></div>
-            <img class="product" src="images/nike3.png"  alt="product">
+            <img class="product" src="images/tshirt_PNG5448.png"  alt="product">
         </div>
     </div>
 </main>
