--- a/nike.html
+++ b/nike.html
@@ -69,7 +69,7 @@
             </div>
             <a href="https://api.whatsapp.com/send/?phone=%2B593983842004&text=Estoy+Interesado+en+este+producto.&app_absent=0" target="_blank" class="buy">Comprar</a>
             <div class="circle"></div>
-            <img class="product" src="images/tshirt_PNG5448.png" alt="product">
+            <img class="product" src="images/kisth_1.png" alt="product">
         </div>
         <div class="box">
           <div class="name">
